<resources>
    <string name="app_name">e-Cyclehub</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="phone_number">Phone Number</string>
    <string name="please_select_user_type">Please Select User Type</string>
    <string name="customer">Customer</string>
    <string name="vendor">Vendor</string>
    <string name="engineer">Engineer</string>
    <string name="vendor_name">Vendor Name: </string>
    <string name="engineer_name">Engineer Name: </string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="login">Login</string>
    <string name="signup">Signup</string>
    <string name="re_enter_password">Re-enter Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="explore_service">Explore Service</string>
    <string name="explore">Explore</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="title_activity_home_bottom">MainActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="signup_as">Signup as</string>
    <string name="confirm">Confirm</string>
    <string name="verification">Verification</string>
    <string name="a_6_digit_pin">A 6 - Digit PIN has been sent to %s, enter it below to continue</string>
    <string name="house_lane_street">House / Lane / Street</string>
    <string name="city">City</string>
    <string name="state">State</string>
    <string name="add_address">Add Address</string>
    <string name="address">Address</string>
    <string name="state_country">%s, %s</string>
    <string name="state_city_pincode">%s,%s - %s</string>
    <string name="state_pincode">%s - %s</string>
    <string name="address_format">%s\n%s\n%s</string>
    <string name="order_details">Order Details</string>
    <string name="amount">Rs %.2f</string>
    <string name="proceed_to_pay">Proceed to Pay Rs %d</string>
    <string name="locus_rationale_title">Rationale Title</string>
    <string name="locus_rationale_message">This is a rationale message.</string>
    <string name="locus_permission_blocked_title">Permission Blocked Title</string>
    <string name="locus_permission_blocked_message">This is a permission blocked message.</string>
    <string name="locus_location_resolution_title">Permission Resolution Title</string>
    <string name="locus_location_resolution_message">This is a permission resolution message.</string>
    <string name="commit_charges">Commit Charges</string>
    <string name="orders">Orders</string>
    <string name="transactions">Transactions</string>
    <string name="my_bike">My Bike</string>
    <string name="logout">Logout</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="order_id">Order id: %s</string>
    <string name="transaction_date">Transaction Date : %S</string>
    <string name="payment_mode">Payment mode : %S</string>
    <string name="payment_status">Payment status : %S</string>
    <string name="do_provide_your_valuable_feedback">Do provide your valuable feedback</string>
    <string name="payment_status_date">The payment was %s received by e-Cycle Hub on %s</string>
    <string name="payment_type">Payment type: %s</string>
    <string name="upload">Upload Bike Image</string>
    <string name="write_addition_info_here_like_if_any_bike_parts_needed">Write addition info here like if any bike parts needed</string>
    <string name="please_provide_if_any_parts_needed_for_faster_resolution">Please provide if any parts needed for faster resolution.</string>
    <string name="the_order_will_be_delivered_within_3_5_business_days">The Order will be delivered within 3-5 business days</string>
    <string name="cancel">Cancel</string>
    <string name="case_on_delivery">Case On Delivery</string>
    <string name="user_same_address">User same address</string>
    <string name="order_services_now">Order Services Now</string>
    <string name="price">Price</string>
    <string name="included_in_the_package_are">Included in the package are:</string>
    <string name="upload_bicycle_image">Upload Bicycle Image</string>
    <string name="online_payment">Online Payment</string>
    <string name="cash_on_service">Cash On Service</string>
    <string name="total">Total</string>
    <string name="tap_to_select">Tap to select</string>
    <string name="service_provider">Service Provider</string>
    <string name="order_on_less_day">Today</string>
    <string name="order_on_one_day">%d day Ago</string>
    <string name="order_on_more_day">%d day Ago</string>
    <string name="order_id_text">Order ID : %s</string>
    <string name="you_are_just_a_few_steps_away">You are just a few steps away</string>
    <string name="welcome_back">Welcome back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="save">Save</string>
    <string name="update_image">Update Image</string>
    <string name="logout_confirm">Are you sure you want logout?</string>
    <string name="no_service">Sorry, Our services aren\'t available in %s yet. Coming soon to your location.</string>
    <string name="s_no">S No.</string>
    <string name="type">Type</string>
    <string name="brand">Brand</string>
    <string name="exit">Exit</string>
    <string name="exit_confirm">Are you sure you want to exit?</string>
    <string name="get_start">Get Started</string>
    <string name="my_order_assignments">My Order Assignments</string>
    <string name="registered_engineers">Registered Engineers</string>
    <string name="transaction_history">Transaction History</string>
    <string name="delivered_to">Delivered to:</string>
    <string name="assign_order">Assign Order</string>
    <string name="google_places_api_key">AIzaSyADL70YHzNYpU1Hr937Z41xCOE0tnKsU5A</string>
    <string name="download_invoice">Download Invoice</string>
    <string name="support">Support</string>
    <string name="specify_spare_parts_required">Specify spare parts required</string>
    <string name="please_specify_exact_issue_of_bicycle">Please specify exact issue of bicycle</string>
    <string name="enter_region_here">*Enter reason here</string>
    <string name="book_service">Book service</string>
    <string name="fill_the_below_details_to_continue_becoming_our_amazing_service_partners">Fill the below details to continue becoming our amazing service partners</string>
    <string name="please_wait">Please wait…</string>
</resources>