<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".ui.address.AddressFragment">

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/nameTitle"
        style="@style/TextInputEditText"
        android:layout_width="match_parent"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxCollapsedPaddingTop="0dp"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView6">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/address_lineTitle"
        style="@style/TextInputEditText"
        android:layout_width="match_parent"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/house_lane_street"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxCollapsedPaddingTop="0dp"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/nameTitle">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/address_line1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_address_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:weightSum="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/address_lineTitle">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/cityTitle"
            style="@style/TextInputEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_weight=".65"
            android:hint="@string/city"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxCollapsedPaddingTop="0dp"
            app:expandedHintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/address_lineTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/city"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/picCodeTitle"
            style="@style/TextInputEditText"
            android:layout_width="0dp"
            app:hintTextAppearance="@style/TextLabel"
            android:layout_height="wrap_content"
            android:layout_weight=".35"
            android:hint="@string/city"
            app:boxBackgroundColor="@android:color/transparent"
            app:boxCollapsedPaddingTop="0dp"
            app:expandedHintEnabled="false"
            app:layout_constraintTop_toBottomOf="@id/address_lineTitle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/pincode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="true"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/stateTitle"
        style="@style/TextInputEditText"
        android:layout_width="match_parent"
        app:hintTextAppearance="@style/TextLabel"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:hint="@string/state"
        app:boxBackgroundColor="@android:color/transparent"
        app:boxCollapsedPaddingTop="0dp"
        app:expandedHintEnabled="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ll_address_line2">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/state"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textEmailAddress" />
    </com.google.android.material.textfield.TextInputLayout>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:drawablePadding="8dp"
        android:text="@string/address"
        android:textSize="22sp"
        app:drawableStartCompat="@drawable/ic_location"
        app:drawableTint="@color/textOnBoarding"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/add_address_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:background="@color/textOnBoarding"
        android:minWidth="200dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/add_address"
        android:textColor="@color/colorWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/stateTitle" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/user_same_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/textOnBoarding"
        android:minWidth="200dp"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:text="@string/user_same_address"
        android:textColor="@color/colorWhite"
        android:visibility="gone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/add_address_button" />

</androidx.constraintlayout.widget.ConstraintLayout>